--- a/style.css
+++ b/style.css
@@ -65,6 +65,14 @@
   flex-direction: column;
 }
 
+.result {
+  text-align: center;
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  font-family: "Dancing Script";
+  text-transform: capitalize;
+}
+
 .texting {
   width: 50%;
   margin: 0 auto 20px auto;
