--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
             <textarea class="texting" name="message" rows="20" cols="40"></textarea>
             <br />
 
-            <button class="btn-new btn1">Submit</button>
+            <button class="btn-new btn1">Analyse Text!</button>
         </div>
 
         {{!-- <form id="contact-form" class="form1 hide" method="POST" action="postest">
